--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,6 +5,7 @@
     </title>
     <link href="/static/stylesheets/styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- <link href="https://use.fontawesome.com/release/v5.8.2/css/all.css" rel="stylesheet"/> -->
 </head>
 <body>
@@ -17,7 +18,7 @@
                 <input type="text" name="content"/>
                 <button type="submit">
                     Submit
-                    <!-- <i class="fa-solid fa-plus"/> -->
+                    <i class="fa fa-plus"></i>
                 </button>
             </form>
             <ul class="todo-list">
@@ -26,12 +27,10 @@
                         First task
                     </div>
                     <a href="" class="edit">
-                        Edit
-                        <!-- <i class="fa-solid fa-pen-to-square"/> -->
+                        <i class="fa fa-pencil"></i>
                     </a>
                     <a href="" class="remove">
-                        Remove
-                        <!-- <i class="fa-solid fa-trash-xmark"/> -->
+                        <i class="fa fa-trash"></i>
                     </a>
                 </li>
             </ul>
