--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -17,7 +17,6 @@
             <form action="/" method="POST" class="todo-header">
                 <input type="text" name="content"/>
                 <button type="submit">
-                    Submit
                     <i class="fa fa-plus"></i>
                 </button>
             </form>
@@ -27,10 +26,10 @@
                         First task
                     </div>
                     <a href="" class="edit">
-                        <i class="fa fa-pencil"></i>
+                        <i class="fa fa-plus"></i>
                     </a>
                     <a href="" class="remove">
-                        <i class="fa fa-trash"></i>
+                        <i class="fa fa-pencil"></i>
                     </a>
                 </li>
             </ul>
