--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -35,7 +35,7 @@ body{
     height: 20px;
 }
 .todo-header button{
-    color: aquamarine;
+    color: white;
     border: none;
     border-radius: 50%;
     cursor: pointer;
