--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -82,3 +82,6 @@ body{
     cursor: pointer;
     text-decoration: none;
 }
+.todo-list-item .strike-through{
+    text-decoration: line-through;
+}
