--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -10,14 +10,12 @@
     <script>
         function done(todoTag){
             const _id = todoTag.getAttribute("data-todoId");
-            console.log(_id)
             fetch('/', {
                 method: 'PUT',
-                body: JSON.stringify({ id: _id })
-            })
-            .then((response) => response.json())
-            .then((result) => {
-                console.log('Success:', result);
+                body: JSON.stringify({ id: `${_id}` }),
+                headers: {
+                    "Content-Type": "application/json",
+                }
             })
             .catch((error) => {
                 console.error('Error:', error);
@@ -25,7 +23,16 @@
         }
         function deleteItem(todoTag){
             const _id = todoTag.getAttribute("data-todoId");
-            console.log(id);
+            fetch(`/${_id}`, {
+                method: 'DELETE',
+                
+                headers: {
+                    "Content-Type": "application/json",
+                }
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+            })
         }
     </script>
 </head>
@@ -44,9 +51,15 @@
             <ul class="todo-list">
                 <% todoList.forEach(function(todo){ %>
                     <li class="todo-list-item">
-                        <div class="todo-list-item-name">
-                            <%= todo.todo %>
-                        </div>
+                        <% if(todo.done){ %>
+                            <div class="todo-list-item-name strike-through">
+                                <%= todo.todo %>
+                            </div>
+                        <% } else { %>
+                            <div class="todo-list-item-name">
+                                <%= todo.todo %>
+                            </div>
+                        <% } %>
                         <button data-todoId="<%= todo._id %>" class="remove" onClick="done(this)">
                             <i class="fa fa-pencil"></i>
                         </button>
