--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -85,3 +85,9 @@ body{
 .todo-list-item .strike-through{
     text-decoration: line-through;
 }
+.xkcd{
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+}
